[package]
name = "rovcheck"
version = "0.1.0"
license = "MIT"
readme = "README.md"
description = "Check if ISP/AS is doing RPKI Origin Validation"
repository = "https://github.com/nxthdr/risotto"
homepage = "https://nxthdr.dev"
keywords = ["BGP", "RPKI", "ROV"]
edition = "2021"
exclude = [
    ".github/*",
    "renovate.json",
]

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.20", features = ["derive"] }
clap-verbosity-flag = {version = "3.0.2", features = ["tracing"]}
nanoid = "0.4.0"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.3"
